--- a/lib/app/styles.css
+++ b/lib/app/styles.css
@@ -1,13 +1,3 @@
-webview {
-  display:inline-flex;
-  width:640px;
-  height:480px;
-}
-webview.secret {
-  flex: 0 1;
-  width: 0px;
-  height: 0px;
-}
 
 .tab-header {
   max-width: 150px;
@@ -23,4 +13,10 @@ webview.secret {
 .nav-tabs > li .close {
   margin: -2px 0 0 10px;
   font-size: 18px;
+}
+
+.read-page {
+  display: inline-block;
+  vertical-align: middle;
+  height: 100%;
 }
